Generalized gif visualization, created methods to visualize the histograms of the different classes and viewing the segmented parts in 3d.

--- a/project.ipynb
+++ b/project.ipynb
@@ -34,7 +34,8 @@
     "import torch\n",
     "import PIL\n",
     "import IPython.display\n",
-    "from tqdm import tqdm"
+    "from tqdm import tqdm\n",
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
@@ -173,27 +174,70 @@
    },
    "outputs": [],
    "source": [
-    "def RGB_mask(mask):\n",
+    "color_actual = [0, 0.5, 0]\n",
+    "color_predicted = [0, 0, 0.5]\n",
+    "\n",
+    "def RGB_mask(mask, color):\n",
     "    result = np.zeros((*mask.shape,3))\n",
-    "    result[..., 1] = 128*mask\n",
+    "    for i in range(3):\n",
+    "        result[...,i]=color[i]*mask\n",
     "    return result\n",
+    "\n",
     "\n",
     "def RGB_image(image):\n",
     "    result = image-image.min() # [a,b] -> [0, b-a]\n",
-    "    result = result/result.max()*255 # [0, b-a] -> [0,1] -> [0,255]\n",
+    "    result = result/result.max() # [0, b-a] -> [0,1] -> [0,255]\n",
     "    return np.repeat(np.reshape(result[:,:,:], [image.shape[0],image.shape[1],image.shape[2],1]),3,axis=3)\n",
     "\n",
-    "image = train_dataset[1][\"img\"].numpy().squeeze()\n",
-    "mask = train_dataset[1][\"mask\"].numpy().squeeze()\n",
-    "indices = train_dataset[1][\"indices\"]\n",
-    "image = unpad(image, indices)\n",
-    "mask = unpad(mask, indices)\n",
-    "rgb_image = RGB_image(image)\n",
-    "rgb_mask = RGB_mask(mask)\n",
-    "rgb_image = 0.5*rgb_image + 0.5*rgb_mask\n",
-    "rgb_image = rgb_image.astype(np.uint8)\n",
-    "images = [PIL.Image.fromarray(rgb_image[:,:,index,:]) for index in range(image.shape[2])]\n",
-    "images[0].save(\"array.gif\", save_all=True, append_images=images[1:],loop=0)"
+    "def visualize_3d_gif(indices, image=None, actual_mask=None, predicted_mask=None, name_gif=\"array.gif\"):\n",
+    "    if image is not None:\n",
+    "        image = image.numpy().squeeze()\n",
+    "        image = unpad(image, indices)\n",
+    "        rgb_image = RGB_image(image)\n",
+    "        result = rgb_image\n",
+    "    for i in range(2):\n",
+    "        mask = [actual_mask, predicted_mask][i]\n",
+    "        if mask is not None:\n",
+    "            mask = mask.numpy().squeeze()\n",
+    "            mask = unpad(mask, indices)\n",
+    "            rgb_mask = RGB_mask(mask, [color_actual, color_predicted][i])\n",
+    "            if result is not None:\n",
+    "                result += rgb_mask\n",
+    "            else:\n",
+    "                result = rgb_mask\n",
+    "\n",
+    "    result = result/np.max(result)*255\n",
+    "    result = result.astype(np.uint8)\n",
+    "    images = [PIL.Image.fromarray(result[:,:,index,:]) for index in range(image.shape[2])]\n",
+    "    images[0].save(name_gif, save_all=True, append_images=images[1:],loop=0)\n",
+    "\n",
+    "def visualize_3d_masks(indices, actual_mask=None, predicted_mask=None):\n",
+    "    fig=plt.figure()\n",
+    "    ax = fig.add_subplot(111, projection=\"3d\")\n",
+    "\n",
+    "    for i in range(2):\n",
+    "        mask = [actual_mask, predicted_mask][i]\n",
+    "        if mask is not None:\n",
+    "            mask = mask.numpy().squeeze()\n",
+    "            mask = unpad(mask, indices)\n",
+    "            pos = np.where(mask==1)\n",
+    "            ax.scatter(pos[0],pos[1],pos[2], color=[color_actual, color_predicted][i])\n",
+    "\n",
+    "    # multiple figures at different angles?\n",
+    "    #ax.view_init(45, 0)\n",
+    "    plt.show()    \n",
+    "\n",
+    "def visualize_histogram(indices, image, mask):\n",
+    "    image = image.numpy().squeeze()\n",
+    "    image = unpad(image, indices)\n",
+    "    mask = mask.nuSmpy().squeeze()\n",
+    "    mask = unpad(mask, indices)\n",
+    "    fig, axs = plt.subplots(1, 2, tight_layout=True) \n",
+    "    axs[0].hist(image[mask==0], bins=20)\n",
+    "    axs[0].set_title(\"Background class\")\n",
+    "    axs[1].hist(image[mask==1], bins=20)\n",
+    "    axs[1].set_title(\"Vessel class\")   \n",
+    "    plt.show()"
    ]
   },
   {
@@ -204,7 +248,10 @@
    },
    "outputs": [],
    "source": [
-    "display(IPython.display.Image(data=open(\"array.gif\",'rb').read(), format='png'))"
+    "visualize_3d_gif(train_dataset[1][\"indices\"],image=train_dataset[1][\"img\"], actual_mask=train_dataset[1][\"mask\"])\n",
+    "display(IPython.display.Image(data=open(\"array.gif\",'rb').read(), format='png'))\n",
+    "visualize_3d_masks(train_dataset[1][\"indices\"], actual_mask=train_dataset[1][\"mask\"])\n",
+    "visualize_histogram(train_dataset[1][\"indices\"], train_dataset[1][\"img\"],train_dataset[1][\"mask\"])"
    ]
   },
   {
