--- a/project_test.ipynb
+++ b/project_test.ipynb
@@ -49,6 +49,7 @@
    },
    "outputs": [],
    "source": [
+    "# Padding no longer used since training set is cropped\n",
     "def pad(array, target_shape, value=-1000):\n",
     "    shape = array.shape\n",
     "    if len(shape) != len(target_shape):\n",
@@ -112,6 +113,7 @@
     "                    dicts.append({\"img\": image_path})\n",
     "    return dicts\n",
     "\n",
+    "# No longer used. Instead transform monai.transforms.LoadImaged\n",
     "class LoadASOCAData(monai.transforms.Transform):\n",
     "    \n",
     "    def __init__(self, keys=None):\n",
@@ -139,14 +141,14 @@
    },
    "outputs": [],
    "source": [
-    "# Some examples of image sizes and pixel voxel dimensions\n",
+    "# Some examples of image sizes and voxel dimensions\n",
     "\n",
     "loader = LoadImage(dtype=np.float32, image_only=True)\n",
     "image = loader(build_dict_ASOCA(\"ASOCA\", mode=\"validation\")[0][\"img\"])\n",
     "# print(f\"input: {train_data_dicts[0]['image']}\")\n",
     "print(f\"image shape: {image.shape}\")\n",
     "print(f\"image voxel dim: {image.pixdim}\")\n",
-    "image = loader(build_dict_ASOCA(\"ASOCA\", mode=\"validation\")[1][\"img\"])\n",
+    "image = loader(build_dict_ASOCA(\"ASOCA\", mode=\"validation\")[2][\"img\"])\n",
     "# print(f\"input: {train_data_dicts[0]['image']}\")\n",
     "print(f\"image shape: {image.shape}\")\n",
     "print(f\"image voxel dim: {image.pixdim}\")"
@@ -177,7 +179,8 @@
     "    monai.transforms.RandFlipd(keys=['img', 'mask'], prob=0.5, spatial_axis=1),\n",
     "    monai.transforms.RandRotated(keys=['img', 'mask'], range_x=np.pi/4, prob=0.5, mode=['bilinear', 'nearest']),\n",
     "    # Crop to 128×128×128\n",
-    "    monai.transforms.RandSpatialCropd(keys=['img', 'mask'], roi_size=[128,128,128], random_size=False)\n",
+    "    monai.transforms.RandSpatialCropd(keys=['img', 'mask'], roi_size=[256,256,128], random_size=False)\n",
+    "    #monai.transforms.DivisiblePadd(keys=['img', 'mask'], k=64)\n",
     "])\n",
     "\n",
     "# Validation transforms\n",
@@ -190,7 +193,7 @@
     "    monai.transforms.Spacingd(keys=[\"img\", \"mask\"], pixdim=(0.4, 0.4, 0.5), mode=(\"bilinear\", \"nearest\")),\n",
     "    # Scale the intensities:\n",
     "    monai.transforms.ScaleIntensityd(keys=['img'],minv=0, maxv=1),\n",
-    "    monai.transforms.Resized(keys=['img', 'mask'], spatial_size=[512,512,256])\n",
+    "    monai.transforms.DivisiblePadd(keys=['img', 'mask'], k=64)\n",
     "])\n",
     "\n",
     "# Test transforms\n",
@@ -202,16 +205,25 @@
     "    # Create uniform voxel spacing:\n",
     "    monai.transforms.Spacingd(keys=[\"img\", \"mask\"], pixdim=(0.4, 0.4, 0.5), mode=(\"bilinear\", \"nearest\")),\n",
     "    # Scale the intensities:\n",
-    "    monai.transforms.ScaleIntensityd(keys=['img'],minv=0, maxv=1),\n",
+    "    #monai.transforms.ScaleIntensityd(keys=['img'],minv=0, maxv=1),\n",
     "])\n",
     "\n",
     "\n",
-    "train_dataset = monai.data.SmartCacheDataset(build_dict_ASOCA(\"ASOCA\", mode=\"train\"), transform=train_transform, cache_rate = 0.1, replace_rate=0.2)\n",
-    "validation_dataset = monai.data.SmartCacheDataset(build_dict_ASOCA(\"ASOCA\", mode=\"validation\"), transform=val_transform, cache_rate = 0.2, replace_rate=0.2)\n",
-    "test_dataset = monai.data.CacheDataset(build_dict_ASOCA(\"ASOCA\", mode=\"test\"), transform=test_transform, cache_rate=0)\n",
-    "\n",
+    "train_dataset = monai.data.CacheDataset(build_dict_ASOCA(\"ASOCA\", mode=\"train\"), transform=train_transform)\n",
+    "validation_dataset = monai.data.CacheDataset(build_dict_ASOCA(\"ASOCA\", mode=\"validation\"), transform=val_transform)\n",
+    "#test_dataset = monai.data.CacheDataset(build_dict_ASOCA(\"ASOCA\", mode=\"test\"), transform=test_transform, cache_rate=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
     "# Check if the image size and voxel dimension have correctly changed\n",
-    "sample_dict = validation_dataset[0]\n",
+    "sample_dict = train_dataset[0]\n",
     "print(\"Size of the image\", sample_dict[\"img\"].shape)\n",
     "print(\"Voxel dim of the image\", sample_dict[\"img\"].pixdim)\n",
     "print(\"Size of the mask\", sample_dict[\"mask\"].shape)\n",
@@ -226,6 +238,7 @@
    },
    "outputs": [],
    "source": [
+    "# Visualization options\n",
     "color_actual = [0, 0.5, 0]\n",
     "color_predicted = [0, 0, 0.5]\n",
     "\n",
@@ -312,9 +325,9 @@
     "import wandb\n",
     "wandb.login()\n",
     "\n",
-    "train_loader = monai.data.DataLoader(train_dataset, batch_size=1, num_workers=1)\n",
+    "train_loader = monai.data.DataLoader(train_dataset, batch_size=4, num_workers=1)\n",
     "validation_loader = monai.data.DataLoader(validation_dataset, batch_size=1, num_workers=1)\n",
-    "device = torch.device(\"cuda:1\")\n",
+    "device = torch.device(\"cuda:3\")\n",
     "model = monai.networks.nets.UNet(\n",
     "    spatial_dims=3,\n",
     "    in_channels=1,\n",
@@ -338,7 +351,7 @@
    "source": [
     "run = wandb.init(\n",
     "    project='ASOCAproject',\n",
-    "    name='test_1',\n",
+    "    name='Test_nocrop1',\n",
     "    config={\n",
     "        'loss function': str(loss_function), \n",
     "        'lr': optimizer.param_groups[0][\"lr\"],\n",
@@ -349,28 +362,6 @@
     "# For example you should add information on your model...\n",
     "\n",
     "run_id = run.id # We remember here the run ID to be able to write the evaluation metrics\n",
-    "\n",
-    "def wandb_masks(mask_output, mask_gt):\n",
-    "    \"\"\" Function that generates a mask dictionary in format that W&B requires \"\"\"\n",
-    "\n",
-    "    # Apply sigmoid to model ouput and round to nearest integer (0 or 1)\n",
-    "    sigmoid = torch.nn.Sigmoid()\n",
-    "    mask_output = sigmoid(mask_output)\n",
-    "    mask_output = torch.round(mask_output)\n",
-    "\n",
-    "    # Transform masks to numpy arrays on CPU\n",
-    "    # Note: .squeeze() removes all dimensions with a size of 1 (here, it makes the tensors 2-dimensional)\n",
-    "    # Note: .detach() removes a tensor from the computational graph to prevent gradient computation for it\n",
-    "    mask_output = mask_output.squeeze().detach().cpu().numpy()\n",
-    "    mask_gt = mask_gt.squeeze().detach().cpu().numpy()\n",
-    "\n",
-    "    # Create mask dictionary with class label and insert masks\n",
-    "    class_labels = {1: 'arteries'}\n",
-    "    masks = {\n",
-    "        'predictions': {'mask_data': mask_output, 'class_labels': class_labels},\n",
-    "        'ground truth': {'mask_data': mask_gt, 'class_labels': class_labels}\n",
-    "    }\n",
-    "    return masks\n",
     "\n",
     "def log_to_wandb(epoch, train_loss, val_loss, batch_data):\n",
     "    \"\"\" Function that logs ongoing training variables to W&B \"\"\"\n",
@@ -384,7 +375,7 @@
     "    #wandb.log({'epoch': epoch, 'train_loss': train_loss, 'val_loss': val_loss, 'results': log_imgs})\n",
     "    wandb.log({'epoch': epoch, 'train_loss': train_loss, 'val_loss': val_loss})\n",
     "\n",
-    "for epoch in tqdm(range(3)):\n",
+    "for epoch in tqdm(range(300)):\n",
     "    # training\n",
     "    model.train()\n",
     "    epoch_loss=0\n",
@@ -420,7 +411,7 @@
     "    log_to_wandb(epoch, train_loss, val_loss, batch)\n",
     "    print(f\"Epoch {epoch+1}, Train loss: {train_loss:.4f}, Validation loss: {val_loss:.4f}\")\n",
     "    \n",
-    "    torch.save(model.state_dict(),os.path.join(f\"Trained\", f\"trainedUNet_epoch{epoch}.pt\"))\n",
+    "    torch.save(model.state_dict(),os.path.join(f\"Trained_nocrop2\", f\"trainedUNet_epoch{epoch}.pt\"))\n",
     "run.finish()"
    ]
   },
@@ -432,8 +423,8 @@
    },
    "outputs": [],
    "source": [
-    "# Option to load a previous trained model\n",
-    "model.load_state_dict(torch.load(r'Trained/trainedUNet_epoch87.pt'))"
+    "# Option to load a previous trained model, check path!\n",
+    "model.load_state_dict(torch.load(r'Trained_crop256/trainedUNet_epoch299.pt'))"
    ]
   },
   {
@@ -454,11 +445,13 @@
     "        model (torch.nn.Module): trained model to evaluate.\n",
     "    \"\"\"\n",
     "    model.eval()\n",
+    "    inferer = monai.inferers.SlidingWindowInferer(roi_size=[256, 256, 128])\n",
     "    discrete_transform = monai.transforms.AsDiscrete(logit_thresh=0.5, threshold_values=True)\n",
     "    Softmax = torch.nn.Softmax()\n",
     "    with torch.no_grad():\n",
     "        print(sample['img'].shape)\n",
-    "        output = discrete_transform(Softmax(model(sample['img'].to('cuda:1'))).cpu()).squeeze()\n",
+    "        #output = discrete_transform(Softmax(model(sample['img'].to('cuda:1'))).cpu()).squeeze()\n",
+    "        output = discrete_transform(Softmax(inferer(sample['img'].to('cuda:1'), network=model).cpu())).squeeze()\n",
     "        output = np.squeeze(output[1, :, :, :])\n",
     "        print(output.shape)\n",
     "    \n",
