--- a/project_test.ipynb
+++ b/project_test.ipynb
@@ -38,7 +38,8 @@
     "import matplotlib.pyplot as plt\n",
     "from monai.transforms import (\n",
     "    LoadImage,\n",
-    "    LoadImaged)"
+    "    LoadImaged)\n",
+    "from monai.inferers import sliding_window_inference"
    ]
   },
   {
@@ -123,13 +124,13 @@
     "        dicts = dict()\n",
     "        image = nrrd.read(sample[\"img\"])[0]\n",
     "        #image, indices = pad(image, (512,512,352))\n",
-    "        dicts[\"img\"] = torch.tensor(image).unsqueeze(0).float()\n",
+    "        dicts[\"img\"] = torch.tensor(image).float()\n",
     "        #dicts[\"indices\"] = indices\n",
     "        dicts[\"sample\"] = sample # For verifying e.g. padding\n",
     "        if \"mask\" in sample.keys():\n",
     "            mask = nrrd.read(sample[\"mask\"])[0]\n",
     "            #mask, indices = pad(mask, (512,512,352), value=0)\n",
-    "            dicts[\"mask\"] = torch.tensor(mask).unsqueeze(0).long()\n",
+    "            dicts[\"mask\"] = torch.tensor(mask).long()\n",
     "        return dicts"
    ]
   },
@@ -144,7 +145,7 @@
     "# Some examples of image sizes and voxel dimensions\n",
     "\n",
     "loader = LoadImage(dtype=np.float32, image_only=True)\n",
-    "image = loader(build_dict_ASOCA(\"ASOCA\", mode=\"validation\")[0][\"img\"])\n",
+    "image = loader(build_dict_ASOCA(\"ASOCA\", mode=\"train\")[0][\"img\"])\n",
     "# print(f\"input: {train_data_dicts[0]['image']}\")\n",
     "print(f\"image shape: {image.shape}\")\n",
     "print(f\"image voxel dim: {image.pixdim}\")\n",
@@ -180,7 +181,6 @@
     "    monai.transforms.RandRotated(keys=['img', 'mask'], range_x=np.pi/4, prob=0.5, mode=['bilinear', 'nearest']),\n",
     "    # Crop to 128×128×128\n",
     "    monai.transforms.RandSpatialCropd(keys=['img', 'mask'], roi_size=[256,256,128], random_size=False)\n",
-    "    #monai.transforms.DivisiblePadd(keys=['img', 'mask'], k=64)\n",
     "])\n",
     "\n",
     "# Validation transforms\n",
@@ -193,7 +193,7 @@
     "    monai.transforms.Spacingd(keys=[\"img\", \"mask\"], pixdim=(0.4, 0.4, 0.5), mode=(\"bilinear\", \"nearest\")),\n",
     "    # Scale the intensities:\n",
     "    monai.transforms.ScaleIntensityd(keys=['img'],minv=0, maxv=1),\n",
-    "    monai.transforms.DivisiblePadd(keys=['img', 'mask'], k=64)\n",
+    "    #monai.transforms.DivisiblePadd(keys=['img', 'mask'], k=64)\n",
     "])\n",
     "\n",
     "# Test transforms\n",
@@ -205,12 +205,12 @@
     "    # Create uniform voxel spacing:\n",
     "    monai.transforms.Spacingd(keys=[\"img\", \"mask\"], pixdim=(0.4, 0.4, 0.5), mode=(\"bilinear\", \"nearest\")),\n",
     "    # Scale the intensities:\n",
-    "    #monai.transforms.ScaleIntensityd(keys=['img'],minv=0, maxv=1),\n",
+    "    monai.transforms.ScaleIntensityd(keys=['img'],minv=0, maxv=1),\n",
     "])\n",
     "\n",
     "\n",
-    "train_dataset = monai.data.CacheDataset(build_dict_ASOCA(\"ASOCA\", mode=\"train\"), transform=train_transform)\n",
-    "validation_dataset = monai.data.CacheDataset(build_dict_ASOCA(\"ASOCA\", mode=\"validation\"), transform=val_transform)\n",
+    "train_dataset = monai.data.CacheDataset(build_dict_ASOCA(\"ASOCA\", mode=\"train\"), transform=train_transform, num_workers = 8)\n",
+    "validation_dataset = monai.data.CacheDataset(build_dict_ASOCA(\"ASOCA\", mode=\"validation\"), transform=val_transform, num_workers =8)\n",
     "#test_dataset = monai.data.CacheDataset(build_dict_ASOCA(\"ASOCA\", mode=\"test\"), transform=test_transform, cache_rate=0)"
    ]
   },
@@ -223,7 +223,7 @@
    "outputs": [],
    "source": [
     "# Check if the image size and voxel dimension have correctly changed\n",
-    "sample_dict = train_dataset[0]\n",
+    "sample_dict = train_dataset[20]\n",
     "print(\"Size of the image\", sample_dict[\"img\"].shape)\n",
     "print(\"Voxel dim of the image\", sample_dict[\"img\"].pixdim)\n",
     "print(\"Size of the mask\", sample_dict[\"mask\"].shape)\n",
@@ -247,7 +247,6 @@
     "    for i in range(3):\n",
     "        result[...,i]=color[i]*mask\n",
     "    return result\n",
-    "\n",
     "\n",
     "def RGB_image(image):\n",
     "    result = image-image.min() # [a,b] -> [0, b-a]\n",
@@ -325,9 +324,9 @@
     "import wandb\n",
     "wandb.login()\n",
     "\n",
-    "train_loader = monai.data.DataLoader(train_dataset, batch_size=4, num_workers=1)\n",
-    "validation_loader = monai.data.DataLoader(validation_dataset, batch_size=1, num_workers=1)\n",
-    "device = torch.device(\"cuda:3\")\n",
+    "train_loader = monai.data.DataLoader(train_dataset, batch_size=4, num_workers=8,pin_memory=torch.cuda.is_available())\n",
+    "validation_loader = monai.data.DataLoader(validation_dataset, batch_size=1, num_workers=8,pin_memory=torch.cuda.is_available())\n",
+    "device = torch.device(\"cuda:7\")\n",
     "model = monai.networks.nets.UNet(\n",
     "    spatial_dims=3,\n",
     "    in_channels=1,\n",
@@ -351,7 +350,7 @@
    "source": [
     "run = wandb.init(\n",
     "    project='ASOCAproject',\n",
-    "    name='Test_nocrop1',\n",
+    "    name='Test_crop256_v3',\n",
     "    config={\n",
     "        'loss function': str(loss_function), \n",
     "        'lr': optimizer.param_groups[0][\"lr\"],\n",
@@ -375,7 +374,7 @@
     "    #wandb.log({'epoch': epoch, 'train_loss': train_loss, 'val_loss': val_loss, 'results': log_imgs})\n",
     "    wandb.log({'epoch': epoch, 'train_loss': train_loss, 'val_loss': val_loss})\n",
     "\n",
-    "for epoch in tqdm(range(300)):\n",
+    "for epoch in tqdm(range(1000)):\n",
     "    # training\n",
     "    model.train()\n",
     "    epoch_loss=0\n",
@@ -403,7 +402,8 @@
     "            model.eval()\n",
     "            inputs = batch[\"img\"].to(device)\n",
     "            labels = batch[\"mask\"].to(device)\n",
-    "            outputs = model(inputs)\n",
+    "            outputs = sliding_window_inference(inputs, (256, 256, 128), 4, model)\n",
+    "            #outputs = model(inputs)\n",
     "            loss = loss_function(outputs, labels)\n",
     "            val_loss+= loss.item()\n",
     "        val_loss = val_loss / step\n",
@@ -411,7 +411,7 @@
     "    log_to_wandb(epoch, train_loss, val_loss, batch)\n",
     "    print(f\"Epoch {epoch+1}, Train loss: {train_loss:.4f}, Validation loss: {val_loss:.4f}\")\n",
     "    \n",
-    "    torch.save(model.state_dict(),os.path.join(f\"Trained_nocrop2\", f\"trainedUNet_epoch{epoch}.pt\"))\n",
+    "    torch.save(model.state_dict(),os.path.join(f\"Trained_crop256_v3\", f\"trainedUNet_epoch{epoch}.pt\"))\n",
     "run.finish()"
    ]
   },
@@ -424,7 +424,7 @@
    "outputs": [],
    "source": [
     "# Option to load a previous trained model, check path!\n",
-    "model.load_state_dict(torch.load(r'Trained_crop256/trainedUNet_epoch299.pt'))"
+    "model.load_state_dict(torch.load(r'Trained_crop256_v2/trainedUNet_epoch543.pt'))"
    ]
   },
   {
@@ -451,7 +451,7 @@
     "    with torch.no_grad():\n",
     "        print(sample['img'].shape)\n",
     "        #output = discrete_transform(Softmax(model(sample['img'].to('cuda:1'))).cpu()).squeeze()\n",
-    "        output = discrete_transform(Softmax(inferer(sample['img'].to('cuda:1'), network=model).cpu())).squeeze()\n",
+    "        output = discrete_transform(Softmax(inferer(sample['img'].to('cuda:6'), network=model).cpu())).squeeze()\n",
     "        output = np.squeeze(output[1, :, :, :])\n",
     "        print(output.shape)\n",
     "    \n",
@@ -478,7 +478,7 @@
    "outputs": [],
    "source": [
     "for sample in validation_loader:\n",
-    "    visual_evaluation(sample, model.to('cuda:1'))"
+    "    visual_evaluation(sample, model.to('cuda:6'))"
    ]
   },
   {
