Added saving of masks and visualization of test set + dice en hd score

--- a/project_test.ipynb
+++ b/project_test.ipynb
@@ -423,26 +423,37 @@
     "        model (torch.nn.Module): trained model to evaluate.\n",
     "    \"\"\"\n",
     "    model.eval()\n",
-    "    inferer = monai.inferers.SlidingWindowInferer(roi_size=[256, 256, 128])\n",
+    "    inferer = monai.inferers.SlidingWindowInferer(roi_size=[256, 256, 192])\n",
     "    discrete_transform = monai.transforms.AsDiscrete(logit_thresh=0.5, threshold_values=True)\n",
+    "    dice_metric = monai.metrics.DiceMetric(include_background=True, reduction=\"mean\", get_not_nans=False)\n",
     "    Softmax = torch.nn.Softmax()\n",
     "    with torch.no_grad():\n",
-    "        output = discrete_transform(Softmax(inferer(sample['img'].to('cuda:6'), network=model).cpu())).squeeze()\n",
-    "        output = np.squeeze(output[1, :, :, :]).astype(np.uint8)\n",
+    "        #print(sample['img'].shape)\n",
+    "        #output = discrete_transform(Softmax(model(sample['img'].to('cuda:1'))).cpu()).squeeze()\n",
+    "        output = discrete_transform(Softmax(inferer(sample['img'].to('cuda:6'), network=model).cpu()))\n",
+    "        dice_metric(y_pred=output, y=sample['mask'])\n",
+    "        hausdorff = monai.metrics.compute_hausdorff_distance(output, sample['mask'],percentile = 95)\n",
+    "        output = output.squeeze().astype(np.uint8)\n",
+    "        output = np.squeeze(output[1, :, :, :])\n",
+    "        #print(output.shape)\n",
     "    \n",
     "    fig, ax =plt.subplots(1,2, subplot_kw={\"projection\":\"3d\"})\n",
     "\n",
     "    actual_mask = np.squeeze(sample['mask'])\n",
     "    pos = np.where(actual_mask==1)\n",
-    "    print(len(pos[0]))\n",
-    "    ax[0].scatter(pos[0],pos[1],pos[2], color=color_actual)\n",
-    "    \n",
     "    pos2 = np.where(output == 1)\n",
-    "    print(len(pos2[0]))\n",
+    "    ax[0].scatter(pos[0],pos[1],pos[2], color=color_actual)\n",
     "    ax[1].scatter(pos2[0],pos2[1],pos2[2], color=color_predicted)\n",
-    "   \n",
+    "    ax[0].title.set_text('Ground truth')\n",
+    "    ax[1].title.set_text('Output')\n",
     "    plt.show()\n",
     "    \n",
+    "    print(\"Ground truth number of points: \",len(pos[0]))\n",
+    "    print(\"Output number of points: \",len(pos2[0]))\n",
+    "    print(\"Dice score: \", dice_metric.aggregate().item())\n",
+    "    print(\"Hausdorff: \", hausdorff.item())\n",
+    "   \n",
+    "       \n",
     "def visual_evaluationtest(sample, model):\n",
     "    \"\"\"\n",
     "    Allow the visual inspection of one sample by plotting the X-ray image, the ground truth (green)\n",
@@ -462,6 +473,7 @@
     "        output = torch.nn.Upsample(size=spatial_shape)(output)\n",
     "        output = output.squeeze().astype(np.uint8)\n",
     "        output = np.squeeze(output[1, :, :, :])\n",
+    "        img_name = sample['img'].meta[\"filename_or_obj\"][0].split(\"/\")[-1].replace('img.nii.gz', 'mask')\n",
     "        \n",
     "    original_affine = sample['img'].meta['original_affine'].detach().numpy()[0]\n",
     "    img_name = sample['img'].meta[\"filename_or_obj\"][0].split(\"/\")[-1].replace('img', 'mask')\n",
