Best training so far. Different cropping. Now with test set.

--- a/project_test.ipynb
+++ b/project_test.ipynb
@@ -38,13 +38,7 @@
     "import matplotlib.pyplot as plt\n",
     "from monai.transforms import (\n",
     "    LoadImage,\n",
-    "    LoadImaged,\n",
-    "    Spacing,\n",
-    "    SaveImage,\n",
-    "    EnsureChannelFirst,\n",
-    "    SpatialResample)\n",
-    "    \n",
-    "from monai.data import ImageWriter, MetaTensor\n",
+    "    LoadImaged)\n",
     "from monai.inferers import sliding_window_inference\n",
     "import nibabel as nib"
    ]
@@ -72,20 +66,16 @@
     "                mask_path = os.path.join(data_path, clazz, \"Annotations\", f\"{clazz}_{index}.nrrd\")\n",
     "                dicts.append({\"img\": image_path, \"mask\": mask_path})\n",
     "        if mode == \"validation\":\n",
-    "            for index in range(17,21):\n",
+    "            for index in range(17,19):\n",
     "                image_path = os.path.join(data_path, clazz, \"CTCA\", f\"{clazz}_{index}.nrrd\")\n",
     "                mask_path = os.path.join(data_path, clazz, \"Annotations\", f\"{clazz}_{index}.nrrd\")\n",
     "                dicts.append({\"img\": image_path, \"mask\": mask_path})\n",
     "        if mode == \"test\":\n",
-    "            if clazz == \"Diseased\":\n",
-    "                for index in range(10,20):\n",
-    "                    image_path = os.path.join(data_path, clazz, f\"Testset_Disease\", f\"{index}.nrrd\")\n",
-    "                    dicts.append({\"img\": image_path})\n",
-    "            else:\n",
-    "                for index in range(10):\n",
-    "                    image_path = os.path.join(data_path, clazz, f\"Testset_{clazz}\", f\"{index}.nrrd\")\n",
-    "                    dicts.append({\"img\": image_path})\n",
-    "                    \n",
+    "            for index in range(19,21):\n",
+    "                image_path = os.path.join(data_path, clazz, \"CTCA\", f\"{clazz}_{index}.nrrd\")\n",
+    "                mask_path = os.path.join(data_path, clazz, \"Annotations\", f\"{clazz}_{index}.nrrd\")\n",
+    "                dicts.append({\"img\": image_path, \"mask\": mask_path})\n",
+    "       \n",
     "    if mode == \"secret_test\":\n",
     "        for index in range(1,21):\n",
     "            image_path = os.path.join(data_path, f\"{index}.img.nii.gz\")\n",
@@ -104,14 +94,18 @@
     "# Some examples of image sizes and voxel dimensions\n",
     "\n",
     "loader = LoadImage(dtype=np.float32, image_only=True)\n",
-    "image = loader(build_dict_ASOCA(\"ASOCA\", mode=\"train\")[0][\"img\"])\n",
+    "image = loader(build_dict_ASOCA(\"ASOCA_secret\", mode=\"secret_test\")[0][\"img\"])\n",
     "# print(f\"input: {train_data_dicts[0]['image']}\")\n",
-    "print(f\"image shape: {image.shape}\")\n",
+    "#print(f\"image affine: {image.meta}\")\n",
     "print(f\"image voxel dim: {image.pixdim}\")\n",
-    "image = loader(build_dict_ASOCA(\"ASOCA\", mode=\"validation\")[2][\"img\"])\n",
+    "meta = image.meta\n",
+    "img_name = image.meta[\"filename_or_obj\"].split(\"/\")[-1].replace('img', 'mask')\n",
+    "print(img_name)\n",
+    "#print(f\"image voxel dim: {image.original_affine}\")\n",
+    "#image = loader(build_dict_ASOCA(\"ASOCA\", mode=\"validation\")[2][\"img\"])\n",
     "# print(f\"input: {train_data_dicts[0]['image']}\")\n",
-    "print(f\"image shape: {image.shape}\")\n",
-    "print(f\"image voxel dim: {image.pixdim}\")"
+    "#print(f\"image shape: {image.shape}\")\n",
+    "#print(f\"image voxel dim: {image.pixdim}\")"
    ]
   },
   {
@@ -132,15 +126,16 @@
     "    # Add channel since transforms expect a channel dimension:\n",
     "    monai.transforms.EnsureChannelFirstd(keys=['img', 'mask'], channel_dim=\"no_channel\"),\n",
     "    # Create uniform voxel spacing:\n",
-    "    monai.transforms.Spacingd(keys=[\"img\", \"mask\"], pixdim=(0.4, 0.4, 0.5), mode=(\"bilinear\", \"nearest\")),\n",
+    "    monai.transforms.Spacingd(keys=[\"img\", \"mask\"], pixdim=(0.4, 0.4, 0.4), mode=(\"bilinear\", \"nearest\")),\n",
+    "    monai.transforms.ScaleIntensityRanged(keys=['img'],a_min=0,a_max=1000,b_min=0.0,b_max=1.0,clip=True),\n",
     "    # Random flip and rotate:\n",
     "    monai.transforms.RandFlipd(keys=['img', 'mask'], prob=0.5, spatial_axis=0),\n",
     "    monai.transforms.RandFlipd(keys=['img', 'mask'], prob=0.5, spatial_axis=1),\n",
     "    monai.transforms.RandFlipd(keys=['img', 'mask'], prob=0.5, spatial_axis=2),\n",
     "    monai.transforms.RandRotated(keys=['img', 'mask'], range_x=np.pi/4, prob=0.5, mode=['bilinear', 'nearest']),\n",
     "    # Crop to 128×128×128\n",
-    "    monai.transforms.RandSpatialCropd(keys=['img', 'mask'], roi_size=[256,256,128], random_size=False),\n",
-    "    monai.transforms.ScaleIntensityRanged(keys=['img'],a_min=0,a_max=1000,b_min=0.0,b_max=1.0,clip=True)\n",
+    "    monai.transforms.RandCropByPosNegLabeld(keys=['img', 'mask'],spatial_size = [256,256,128],label_key='mask',neg=0,num_samples=2)\n",
+    "    #monai.transforms.RandSpatialCropd(keys=['img', 'mask'], roi_size=[256,256,128], random_size=False)\n",
     "])\n",
     "\n",
     "# Validation transforms\n",
@@ -150,24 +145,37 @@
     "    # Add channel since transforms expect a channel dimension:\n",
     "    monai.transforms.EnsureChannelFirstd(keys=['img', 'mask'], channel_dim=\"no_channel\"),\n",
     "    # Create uniform voxel spacing:\n",
-    "    monai.transforms.Spacingd(keys=[\"img\", \"mask\"], pixdim=(0.4, 0.4, 0.5), mode=(\"bilinear\", \"nearest\")),\n",
-    "    monai.transforms.ScaleIntensityRanged(keys=['img'],a_min=0,a_max=1000,b_min=0.0,b_max=1.0,clip=True)\n",
+    "    monai.transforms.Spacingd(keys=[\"img\", \"mask\"], pixdim=(0.4, 0.4, 0.4), mode=(\"bilinear\", \"nearest\")),\n",
+    "    monai.transforms.ScaleIntensityRanged(keys=['img'],a_min=0,a_max=1000,b_min=0.0,b_max=1.0,clip=True),\n",
+    "    #monai.transforms.RandCropByPosNegLabeld(keys=['img', 'mask'],spatial_size = [256,256,128],label_key='mask',neg=0,num_samples=2)\n",
     "])\n",
     "\n",
     "# Test transforms\n",
     "test_transform = monai.transforms.Compose([\n",
     "    # Load the image with monai's image loader:\n",
+    "    monai.transforms.LoadImaged(keys=(\"img\", 'mask'), image_only=True),\n",
+    "    # Add channel since transforms expect a channel dimension:\n",
+    "    monai.transforms.EnsureChannelFirstd(keys=['img', 'mask'], channel_dim=\"no_channel\"),\n",
+    "    # Create uniform voxel spacing:\n",
+    "    monai.transforms.Spacingd(keys=['img', 'mask'], pixdim=(0.4, 0.4, 0.4), mode=(\"bilinear\", \"nearest\")),\n",
+    "    monai.transforms.ScaleIntensityRanged(keys=['img'],a_min=0,a_max=1000,b_min=0.0,b_max=1.0,clip=True),\n",
+    "])\n",
+    "\n",
+    "# SecretTest transforms\n",
+    "secrettest_transform = monai.transforms.Compose([\n",
+    "    # Load the image with monai's image loader:\n",
     "    monai.transforms.LoadImaged(keys=(\"img\"), image_only=True),\n",
     "    # Add channel since transforms expect a channel dimension:\n",
     "    monai.transforms.EnsureChannelFirstd(keys=['img'], channel_dim=\"no_channel\"),\n",
     "    # Create uniform voxel spacing:\n",
-    "    monai.transforms.Spacingd(keys=['img'], pixdim=(0.4, 0.4, 0.5), mode=(\"bilinear\")),\n",
-    "    monai.transforms.ScaleIntensityRanged(keys=['img'],a_min=0,a_max=1000,b_min=0.0,b_max=1.0,clip=True)\n",
+    "    monai.transforms.Spacingd(keys=['img'], pixdim=(0.4, 0.4, 0.4), mode=(\"bilinear\")),\n",
+    "    monai.transforms.ScaleIntensityRanged(keys=['img'],a_min=0,a_max=1000,b_min=0.0,b_max=1.0,clip=True),\n",
     "])\n",
     "\n",
     "train_dataset = monai.data.CacheDataset(build_dict_ASOCA(\"ASOCA\", mode=\"train\"), transform=train_transform, num_workers = 8)\n",
     "validation_dataset = monai.data.CacheDataset(build_dict_ASOCA(\"ASOCA\", mode=\"validation\"), transform=val_transform, num_workers =8)\n",
-    "secrettest_dataset = monai.data.CacheDataset(build_dict_ASOCA(\"ASOCA_secret\", mode=\"secret_test\"), transform=test_transform, num_workers = 8)"
+    "secrettest_dataset = monai.data.CacheDataset(build_dict_ASOCA(\"ASOCA_secret\", mode=\"secret_test\"), transform=secrettest_transform, num_workers = 8)\n",
+    "test_dataset = monai.data.CacheDataset(build_dict_ASOCA(\"ASOCA\", mode=\"test\"), transform=test_transform, num_workers = 8)"
    ]
   },
   {
@@ -179,11 +187,23 @@
    "outputs": [],
    "source": [
     "# Check if the image size and voxel dimension have correctly changed\n",
-    "sample_dict = train_dataset[20]\n",
-    "print(\"Size of the image\", sample_dict[\"img\"].shape)\n",
-    "print(\"Voxel dim of the image\", sample_dict[\"img\"].pixdim)\n",
-    "print(\"Size of the mask\", sample_dict[\"mask\"].shape)\n",
-    "print(\"Voxel dim of the mask\", sample_dict[\"mask\"].pixdim)"
+    "sample_dicttest = train_dataset[12][1]\n",
+    "#print(\"Size of the image\", sample_dicttest[\"img\"].meta['original_affine'])\n",
+    "print(\"Voxel dim of the image\", sample_dicttest[\"img\"].pixdim)\n",
+    "print(\"Shape of the image\", sample_dicttest[\"img\"].shape)\n",
+    "#print(\"Size of the mask\", sample_dict[\"mask\"].shape)\n",
+    "#print(\"Voxel dim of the mask\", sample_dict[\"mask\"].pixdim)\n",
+    "\n",
+    "sample_dict = validation_dataset[0]\n",
+    "#print(\"Size of the image\", sample_dict[\"img\"].shape)\n",
+    "#print(\"Voxel dim of the image\", sample_dict[\"img\"].pixdim)\n",
+    "#print(\"Size of the mask\", sample_dict[\"mask\"].shape)\n",
+    "#print(\"Voxel dim of the mask\", sample_dict[\"mask\"].pixdim)\n",
+    "\n",
+    "original_affine = sample_dicttest['img'].meta['original_affine']\n",
+    "img_name = sample_dicttest['img'].meta[\"filename_or_obj\"].split(\"/\")[-1].replace('img.nii.gz', 'mask')\n",
+    "#print(original_affine)\n",
+    "#print(img_name)"
    ]
   },
   {
@@ -195,8 +215,11 @@
    "outputs": [],
    "source": [
     "# Visualization options\n",
-    "color_actual = [0, 0.5, 0]\n",
-    "color_predicted = [0, 0, 0.5]\n",
+    "#color_actual = [0, 0.5, 0]\n",
+    "#color_predicted = [0, 0, 0.5]\n",
+    "\n",
+    "color_actual = [0.616, 0.816, 0.769]\n",
+    "color_predicted = '#beb4ac'#[0.808, 0.773, 0.745]\n",
     "\n",
     "def RGB_mask(mask, color):\n",
     "    result = np.zeros((*mask.shape,3))\n",
@@ -302,9 +325,12 @@
     "wandb.login()\n",
     "\n",
     "train_loader = monai.data.DataLoader(train_dataset, batch_size=4, num_workers=8,pin_memory=torch.cuda.is_available())\n",
-    "validation_loader = monai.data.DataLoader(validation_dataset, batch_size=1, num_workers=8,pin_memory=torch.cuda.is_available())\n",
+    "validation_loader = monai.data.DataLoader(validation_dataset, batch_size=4, num_workers=4,pin_memory=torch.cuda.is_available())\n",
     "secrettest_loader = monai.data.DataLoader(secrettest_dataset, batch_size=1, num_workers=8,pin_memory=torch.cuda.is_available())\n",
-    "device = torch.device(\"cuda:7\")\n",
+    "test_loader = monai.data.DataLoader(test_dataset, batch_size=1, num_workers=8,pin_memory=torch.cuda.is_available())\n",
+    "\n",
+    "\n",
+    "#device = torch.device(\"cuda:0\")\n",
     "model = monai.networks.nets.UNet(\n",
     "    spatial_dims=3,\n",
     "    in_channels=1,\n",
@@ -312,10 +338,11 @@
     "    channels=(8, 16, 32, 64, 128),\n",
     "    strides=(2, 2, 2, 2),\n",
     "    num_res_units=2\n",
-    ").to(device)\n",
+    ")\n",
     "\n",
     "optimizer = torch.optim.Adam(model.parameters(), lr=1e-3)\n",
-    "loss_function = monai.losses.DiceLoss(to_onehot_y=True, softmax=True)"
+    "loss_function = monai.losses.DiceLoss(include_background=True,to_onehot_y=True, softmax=True)\n",
+    "#loss_function = monai.losses.SoftclDiceLoss"
    ]
   },
   {
@@ -328,7 +355,7 @@
    "source": [
     "run = wandb.init(\n",
     "    project='ASOCAproject',\n",
-    "    name='Test_crop256_5',\n",
+    "    name='Test_crop256_v9',\n",
     "    config={\n",
     "        'loss function': str(loss_function), \n",
     "        'lr': optimizer.param_groups[0][\"lr\"],\n",
@@ -380,8 +407,8 @@
     "            model.eval()\n",
     "            inputs = batch[\"img\"].to(device)\n",
     "            labels = batch[\"mask\"].to(device)\n",
-    "            outputs = sliding_window_inference(inputs, (256, 256, 128), 4, model)\n",
-    "            #outputs = model(inputs)\n",
+    "            #outputs = sliding_window_inference(inputs, (256, 256, 128), 4, model)\n",
+    "            outputs = model(inputs)\n",
     "            loss = loss_function(outputs, labels)\n",
     "            val_loss+= loss.item()\n",
     "        val_loss = val_loss / step\n",
@@ -389,7 +416,7 @@
     "    log_to_wandb(epoch, train_loss, val_loss, batch)\n",
     "    print(f\"Epoch {epoch+1}, Train loss: {train_loss:.4f}, Validation loss: {val_loss:.4f}\")\n",
     "    \n",
-    "    torch.save(model.state_dict(),os.path.join(f\"Trained_crop256_v5\", f\"trainedUNet_epoch{epoch}.pt\"))\n",
+    "    torch.save(model.state_dict(),os.path.join(f\"Trained_crop256_v9\", f\"trainedUNet_epoch{epoch}.pt\"))\n",
     "run.finish()"
    ]
   },
@@ -402,7 +429,7 @@
    "outputs": [],
    "source": [
     "# Option to load a previous trained model, check path!\n",
-    "model.load_state_dict(torch.load(r'Trained_crop256_v4/trainedUNet_epoch352.pt'))"
+    "model.load_state_dict(torch.load(r'Trained_crop256_v11/trainedUNet_epoch311.pt'))"
    ]
   },
   {
@@ -413,6 +440,7 @@
    },
    "outputs": [],
    "source": [
+    "from monai.metrics import DiceHelper\n",
     "def visual_evaluation(sample, model):\n",
     "    \"\"\"\n",
     "    Allow the visual inspection of one sample by plotting the X-ray image, the ground truth (green)\n",
@@ -423,15 +451,14 @@
     "        model (torch.nn.Module): trained model to evaluate.\n",
     "    \"\"\"\n",
     "    model.eval()\n",
-    "    inferer = monai.inferers.SlidingWindowInferer(roi_size=[256, 256, 192])\n",
+    "    inferer = monai.inferers.SlidingWindowInferer(roi_size=[256, 256, 128])\n",
     "    discrete_transform = monai.transforms.AsDiscrete(logit_thresh=0.5, threshold_values=True)\n",
-    "    dice_metric = monai.metrics.DiceMetric(include_background=True, reduction=\"mean\", get_not_nans=False)\n",
     "    Softmax = torch.nn.Softmax()\n",
     "    with torch.no_grad():\n",
     "        #print(sample['img'].shape)\n",
     "        #output = discrete_transform(Softmax(model(sample['img'].to('cuda:1'))).cpu()).squeeze()\n",
-    "        output = discrete_transform(Softmax(inferer(sample['img'].to('cuda:6'), network=model).cpu()))\n",
-    "        dice_metric(y_pred=output, y=sample['mask'])\n",
+    "        output = discrete_transform(Softmax(inferer(sample['img'], network=model).cpu()))\n",
+    "        score, not_nans = DiceHelper(include_background=False,softmax=True)(output, sample['mask'])\n",
     "        hausdorff = monai.metrics.compute_hausdorff_distance(output, sample['mask'],percentile = 95)\n",
     "        output = output.squeeze().astype(np.uint8)\n",
     "        output = np.squeeze(output[1, :, :, :])\n",
@@ -442,15 +469,26 @@
     "    actual_mask = np.squeeze(sample['mask'])\n",
     "    pos = np.where(actual_mask==1)\n",
     "    pos2 = np.where(output == 1)\n",
-    "    ax[0].scatter(pos[0],pos[1],pos[2], color=color_actual)\n",
-    "    ax[1].scatter(pos2[0],pos2[1],pos2[2], color=color_predicted)\n",
+    "    ax[0].scatter(pos[0],pos[1],pos[2], color=color_actual,s=0.5)\n",
+    "    ax[1].scatter(pos2[0],pos2[1],pos2[2], color=color_predicted,s=0.5)\n",
     "    ax[0].title.set_text('Ground truth')\n",
-    "    ax[1].title.set_text('Output')\n",
+    "    ax[1].title.set_text('Results')\n",
+    "    ax[0].set_axis_off()\n",
+    "    ax[1].set_axis_off()\n",
+    "    ax[0].set_xlim([min(pos[0]),max(pos[0])])\n",
+    "    ax[0].set_ylim([min(pos[1]),max(pos[1])])\n",
+    "    ax[0].set_zlim([min(pos[2]),max(pos[2])])\n",
+    "    ax[1].set_xlim([min(pos[0]),max(pos[0])])\n",
+    "    ax[1].set_ylim([min(pos[1]),max(pos[1])])\n",
+    "    ax[1].set_zlim([min(pos[2]),max(pos[2])])\n",
+    "    img_name = sample['img'].meta[\"filename_or_obj\"][0].split(\"/\")[-1].replace('.nrrd', '_result.png')\n",
+    "    plt.subplots_adjust(wspace=-0.15, hspace=-0.5)\n",
+    "    plt.savefig(os.path.join('Result_images', img_name), bbox_inches='tight',dpi=1200)\n",
     "    plt.show()\n",
     "    \n",
     "    print(\"Ground truth number of points: \",len(pos[0]))\n",
     "    print(\"Output number of points: \",len(pos2[0]))\n",
-    "    print(\"Dice score: \", dice_metric.aggregate().item())\n",
+    "    print(\"Dice score:\", score.detach().numpy()[0])\n",
     "    print(\"Hausdorff: \", hausdorff.item())\n",
     "   \n",
     "       \n",
@@ -469,7 +507,7 @@
     "    Softmax = torch.nn.Softmax()\n",
     "    with torch.no_grad():\n",
     "        spatial_shape = sample['img'].meta['spatial_shape'].tolist()[0]\n",
-    "        output = discrete_transform(Softmax(inferer(sample['img'].to('cuda:6'), network=model).cpu()))\n",
+    "        output = discrete_transform(Softmax(inferer(sample['img'], network=model).cpu()))\n",
     "        output = torch.nn.Upsample(size=spatial_shape)(output)\n",
     "        output = output.squeeze().astype(np.uint8)\n",
     "        output = np.squeeze(output[1, :, :, :])\n",
@@ -495,9 +533,8 @@
    },
    "outputs": [],
    "source": [
-    "for sample in validation_loader:\n",
-    "    visual_evaluation(sample, model.to('cuda:6'))\n",
-    "    break"
+    "for sample in test_loader:\n",
+    "    visual_evaluation(sample, model)"
    ]
   },
   {
@@ -509,7 +546,7 @@
    "outputs": [],
    "source": [
     "for sample in secrettest_loader:\n",
-    "    visual_evaluationtest(sample, model.to('cuda:6'))"
+    "    visual_evaluationtest(sample, model)"
    ]
   },
   {
